--- a/src/main/res/layout/detected_activity.xml
+++ b/src/main/res/layout/detected_activity.xml
@@ -31,6 +31,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_below="@+id/request_activity_updates_button"
         android:layout_marginTop="@dimen/narrow_space" />
 
@@ -39,6 +40,7 @@
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/detected_activity_name"
         android:layout_marginTop="@dimen/progress_bar_top_margin"
